--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
-    "name": "smenu",
-    "version": "1.0.0",
+    "name": "zepto SnapScroll",
+    "version": "0.0.2",
+    "homepage":"http://www.ghugo.com",
+    "author":"hugohua",
+    "license": [
+        "MIT"
+    ],
+    "keywords": [
+        "mobile",
+        "plugin",
+        "webkit",
+        "zepto",
+        "scroll"
+    ],
     "devDependencies": {
         "grunt-contrib-uglify": "~0.2.0"
     }
