--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-    "name": "zepto SnapScroll",
-    "version": "0.0.2",
+    "name": "snapScroll",
+    "version": "0.1.0",
     "homepage":"http://www.ghugo.com",
-    "author":"hugohua",
-    "license": [
-        "MIT"
-    ],
     "keywords": [
         "mobile",
         "plugin",
@@ -13,7 +9,11 @@
         "zepto",
         "scroll"
     ],
+    "author": "hugohua",
+    "license": ["MIT"],
+    "readmeFilename": "README.md",
     "devDependencies": {
+        "grunt": "~0.4.1",
         "grunt-contrib-uglify": "~0.2.0"
     }
 }
